syntax = "proto3";

package pcs.database.v1;
option go_package = "github.com/streamingfast/substream-pancakeswap/pcs-go;database";

message DatabaseChanges {
  repeated TableChange tableChanges = 1;
}

message TableChange {
  string table = 1;
  string pk = 2;
  uint64 block_num = 3;
  uint64 ordinal = 4;
  enum Operation {
    UNSET = 0;
    CREATE = 1;
    UPDATE = 2;
    DELETE = 3;
  }
  Operation operation = 5;
  repeated Field fields = 6;
}

message Field {
  string name = 1;
  string new_value = 2;
  string old_value = 3;
}
